<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="16dp">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/update_vet_details"
        android:textColor="#213646"
        android:textSize="25sp"
        style="@style/titles"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/area_of_expertise"
        android:textColor="#213646"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/expertise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center_vertical|start"
        android:background="@drawable/rounded_corner"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="15dp"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/a_little_about_me"
        android:textColor="#213646"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/aboutMe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center_vertical|start"
        android:background="@drawable/rounded_corner"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="15dp"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/errorMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_all_fields_filled"
        android:textColor="#161313"
        android:visibility="gone" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/update_details"
        android:textSize="18sp"
        android:gravity="center"
        android:background="@drawable/rounded_bottom"/>


</LinearLayout>
</ScrollView>