<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/pet_details"
            android:textColor="#213646"
            android:textSize="25sp"
            style="@style/titles"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:textColor="#213646"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_corner"
            android:importantForAutofill="no"
            android:inputType="number"
            android:padding="8dp"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/genus"
            android:textColor="#213646"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_corner"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="8dp"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/medical_history"
            android:textColor="#213646"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/medicalHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/mandatory_filed"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="8dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/errorMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_all_fields_filled"
            android:textColor="#161313"
            android:visibility="gone" />

        <Button
            android:id="@+id/update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/update_details"
            android:textSize="16sp"
            android:gravity="center"
            android:background="@drawable/rounded_bottom"/>

    </LinearLayout>
</ScrollView>