<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backround">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginTop="100dp"
        android:importantForAccessibility="no"
        app:srcCompat="@drawable/icon_logo" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <LinearLayout
        android:id="@+id/googleButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/rounded_bottom"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="Google Logo"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_google" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roberto"
            android:paddingStart="8dp"
            android:text="@string/sign_in_with_google"
            android:textColor="#000000"
            android:textSize="25dp" />

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center"-->
<!--            android:fontFamily="@font/roberto"-->
<!--            android:paddingStart="8dp"-->
<!--            android:text="@string/fui_sign_in_with_google"-->
<!--            android:textColor="#000000"-->
<!--            android:textSize="25dp" />-->

    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <LinearLayout
        android:id="@+id/facebookButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/rounded_bottom"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="Facebook Logo"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_facebook" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roberto"
            android:paddingStart="8dp"
            android:text="@string/sign_in_with_facebook"
            android:textColor="#000000"
            android:textSize="25dp" />

    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <LinearLayout
        android:id="@+id/emailButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/rounded_bottom"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="Mail Logo"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_gmail" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roberto"
            android:paddingStart="8dp"
            android:text="@string/sign_in_with_gmail"
            android:textColor="#000000"
            android:textSize="25dp" />

    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <TextView
        android:id="@+id/tosAndPp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>